Added while loops and installer source code. Updated installer (still WIP)

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@
 **/*.exe
 /grammer.md
 git_repo/
+tokens.txt
 
 installer/vs/*
 !installer/vs/installer_wix
 installer/vs/installer_wix/*
 !installer/vs/installer_wix/package
-installer/vs/installer_wix/package/*
+installer/vs/installer_wix/package/obj/
 !installer/vs/installer_wix/package/bin
 installer/vs/installer_wix/package/bin/x86/Debug/en-US/*
 !installer/vs/installer_wix/package/bin/x86/Debug/en-US/package.msi
