Update Tweaked error classes to have more room for detail. Added a Json encoder for tokens.

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 [Dev-Settings]
 check-syntax = true
 write-tokens = true
-new-parser = false
+new-parser = true
 
 [Uranium-Compiler]
 no-debug-compiler-output = true
